# pyWeastCoastBot

./: .dockerignore  .env.example  .flake8  .gitignore  Dockerfile  Makefile  README.md  app.py  bot.py  compose.format.yml  compose.override.yml  compose.postgres.yml  compose.yml  docker-compose.linter.yml  docker-compose.override.yml  docker-compose.rpi.yml  docker-compose.yml  health_check.py  heroku.yml  manage.py  pyproject.toml  requirements.txt  run_bot.py  settings.py  web.py
.github/workflows/: docker-publish.yml
bot/: .env.example  .flake8  Dockerfile  bot.py  manage.py  requirements.txt  settings.py
bot/cogs/: cog.py.example  crypto.py  fitbot.py  imdb.py  nba.py  ping.py  reminders.py  stonk.py  wiki.py
bot/db/: models.py
bot/db/migrations/: 0001_initial.py  0002_alter_reminder_message.py  0003_thirdpartyauth.py  0004_userwinpoolteam.py
bot/domain/nba/: nba_game.py
bot/domain/nba_wins_pool/: const.py  guild_standings.py  nba_wins_pool_service.py
bot/lib/balldontlie/: client.py  params.py
bot/lib/crypto/: cg.py
bot/lib/fitbot/: client.py  config.py  service.py
bot/lib/nba_wins_pool/: nba_wins_pool.py  team_auction_price.json  team_owner.json
bot/lib/omdb/: client.py  imdb_file.py
bot/lib/stonk/: stock.py  stonk_intervals.py  stonk_periods.py  stonk_service.py
bot/lib/utils/: consts.py  graph.py  time.py  types.py
bot/management/commands/: load_win_pools_teams.py  load_wins_pool_team.py
cogs/: imdb.py  ping.py  stonk.py
db/: models.py
db/migrations/: 0001_initial.py  0003_thirdpartyauth.py  0005_userwinpoolteam_auction_price.py
docs/: README.md  index.html  oauth-callback.html
domain/nba/: guild_standings.py  nba_game.py  nba_repository.py  nba_team.py  nba_wins_pool_service.py
lib/balldontlie/: client.py  params.py
lib/crypto/: cg.py  coin.py
lib/fitbot/: config.py  service.py
lib/omdb/: client.py
lib/stonk/: stock.py  stonk_service.py
lib/utils/: consts.py  graph.py  string.py
pi/: README.md  compose.rpi.yml  pyweastcoastbot.service
pyWeastCoastBot/: settings.py
src/pyWeastCoastBot/: __main__.py  config.py
src/pyWeastCoastBot/bot/: main.py
src/pyWeastCoastBot/bot/cogs/: crypto.py  fitbot.py  imdb.py  ping.py  reminders.py  stonk.py  wiki.py
src/pyWeastCoastBot/db/: models.py  session.py
src/pyWeastCoastBot/db/migrations/: env.py
src/pyWeastCoastBot/db/migrations/versions/: 1bda0919aac5_init.py  2077cfc26e01_server_scoping.py  f75546b2dd35_init.py
src/pyWeastCoastBot/lib/crypto/: cg.py  coin.py
src/pyWeastCoastBot/lib/fitbot/: config.py  service.py
src/pyWeastCoastBot/lib/omdb/: client.py  imdb_file.py
src/pyWeastCoastBot/lib/stonk/: stock.py  stonk_service.py
src/pyWeastCoastBot/utils/: consts.py  graph.py  math.py  time.py  types.py
