[tool.black]
line-length = 100
target-version = ['py39']
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''
[project]
name = "pyweastcoastbot"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "black",
    "dateparser",
    "django (==3.2.24)",
    "dj-database-url",
    "flake8",
    "fitbit (>=0.3.1)",
    "humanize",
    "kaleido (==0.2.0)",
    "pandas (>=1.3.3)",
    "plotly (>=5.2.1)",
    "py-cord (==2.5.0)",
    "pycoingecko (>=2.2.0)",
    "python-dateutil",
    "psycopg2-binary (>=2.9.10)",
    "requests",
    "table2ascii",
    "yfinance"
]

[tool.setuptools.packages.find]
where = ["."]  
include = ["pyWeastCoastBot*"]
exclude = ["db*", "lib*", "bot*", "domain*"]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"
